objects/VisualforceAccessMetric__c.object
<CustomObject>
    <description>Custom object to be used in reporting snapshot to capture daily snapshot of data in setup object &quot;Visualforceaccessmetrics&quot;</description>
    <fields>
        <fullName>ApexPageId__c</fullName>
        <label>Page ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DailyPageViewCount__c</fullName>
        <label>Daily Page View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LogDate__c</fullName>
        <label>Log Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MetricsDate__c</fullName>
        <label>Metrics Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <label>Profile ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Visualforce Access Metric</label>
    <nameField>
        <label>VisualforceAccessMetric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visualforce Access Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>